--- a/book-fr/05-analyses-de-redondance.Rmd
+++ b/book-fr/05-analyses-de-redondance.Rmd
@@ -140,13 +140,13 @@ Notre modèle complet est statistiquement significatif (p = 0.001), et chaque va
 
 L'un des aspects les plus puissants de RDA est la **visualisation simultanée** de votre réponse et des variables explicatives (*c'est-à-dire *les espèces et les variables environnementales).
 
-Comme pour la PCA dans (l'atelier 9)[https://github.com/QCBSRworkshops/workshop09], on doit choisir entre deux options de cadrage:
+Comme pour la PCA dans [l'atelier 9](https://github.com/QCBSRworkshops/workshop09), on doit choisir entre deux options de cadrage:
 
 | Type 1                                           | Type 2                                            |
 | -------------------------------------------------|---------------------------------------------------|
 | distances entre objects ≈ distances euclidiennes | angles entre variables ≈ leur corrélation         |
 
-```{r, fig.show = "hold", out.width = "50%"}
+```{r, fig.show = "hold", out.width = "50%", out.height=100%}
 # Type 1 scaling
 ordiplot(spe.rda.signif, scaling = 1, type = "text")
 # Type 2 scaling
@@ -179,7 +179,7 @@ ordiplot(spe.rda.signif, scaling = 2, type = "text")
 
 Les fonctions `plot()` et `ordiplot()` produisent des triplots rapidement et facilement, mais on peut aussi configurer les graphiques avec l'extraction de scores avec `scores()` et leur visualisation avec `points()`, `text()`, et `arrows()`. Voici un exemple de triplot personnalisé. N'hésitez pas à jouer avec les couleurs et d'autres paramètres pour vous approprier cet exemple!
 
-```{r}
+```{r, fig.height = 6, fig.width = 6}
 # Configuration des triplots RDA!
 
 ## extrait le % expliqué par les 2 premiers axes
@@ -319,7 +319,7 @@ Nous trouvons que quatre variables explicatives sont retenues après la sélecti
 
 **Étape 5:** Visualiser le modèle à l'aide d'un triplot!
 
-```{r, fig.show = "hold", out.width="50%"}
+```{r, fig.show = "hold", out.width="50%", out.height='100%'}
 # Cadrage 1
 ordiplot(mite.spe.rda.signif,
          scaling = 1,
