--- a/book-fr/index.Rmd
+++ b/book-fr/index.Rmd
@@ -1,8 +1,8 @@
 --- 
-title: "Workshop 10: Advanced Multivariate Analyses in `R`"
-subtitle: "QCBS R Workshop Series"
+title: "Atelier 10: Analyses multivariées avancées en `R`"
+subtitle: "Série d'ateliers R du CSBQ"
 author:
-- Developed and maintained by the contributors of the QCBS R Workshop Series^[The QCBS R Workshop Series is part of the [Québec Centre for Biodiversity Science](https://www.qcbs.ca), and is maintained by the series coordinators and graduent student, postdoctoral, and research professional members. **The contributors for this workshop can be accessed [here](link)**.]
+- Développé et entretenu par les contributeurs et les contributrices de la Série d'ateliers R du CSBQ^[La Série d'ateliers R du CSBQ fait partie du [Centre de la science de la biodiversité du Québec](https://www.qcbs.ca), et est maintenue par les coordonnateurs et les coordonnatrices de la série, et les membres étudiants diplômés, postdoctoraux et professionnels de la recherche. **La liste des contributeurs et des contributrices de cet atelier sont accessibles[ici](lien)**].
 date: "`r Sys.time()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -11,7 +11,7 @@ biblio-style: apalike
 link-citations: yes
 cover-image: assets/images/logo/csbq_logo_accueil.png
 github-repo: "qcbsRworkshops/workshop10"
-description: "Advanced Multivariate Analyses in `R`"
+description: "Analyses multivariées avancées en `R`"
 favicon: "assets/images/favicon.ico"
 always_allow_html: yes
 url: 'https\://github.com/qcbsRworkshops/'
@@ -20,72 +20,81 @@ config:
     link: https://github.com/qcbsRworkshops/workshop10/edit/main/book-fr/%s
     text: "Suggest changes"
 ---
-# (PART\*) QCBS R Workshop Series {-}
+# (PART\*) Série d'ateliers R du CSBQ {-}
 
-# Preface {-}
+# Préface {-}
 
-The **QCBS R Workshop Series** is a series of 10 workshops that walks participants through the steps required to use R for a wide array of statistical analyses relevant to research in biology and ecology. These open-access workshops were created by members of the QCBS both for members of the QCBS and the larger community.
+La **Série d'ateliers R du CSBQ** est une série de 10 ateliers qui guide les participants à travers les étapes nécessaires à l'utilisation de R pour un large éventail d'analyses statistiques pertinentes pour la recherche en biologie et en écologie. Ces ateliers en accès libre ont été créés par des membres du CSBQ, à la fois pour les membres du CSBQ et pour la communauté au sens large.
 
-The content of this workshop has been peer-reviewed by several QCBS members. If you would like to suggest modifications, please contact the current series coordinators, listed on the main Github page.
+Le contenu de cet atelier a été revu par plusieurs membres du CSBQ. Si vous souhaitez suggérer des modifications, veuillez contacter les coordinateurs de la série actuelle, dont la liste figure sur la page principale de Github
 
-## Code of conduct
+## Code de conduite
 
-The QCBS R Workshop Series and the QCBS R Symposium are venues dedicated to providing a welcoming and supportive environment for all people, regardless of background or identity.
+La Série d'ateliers R du CSBQ et le Symposium R du CSBQ sont des lieux dédiés à fournir un environnement accueillant et favorable à toutes les personnes, indépendamment de leurs origines ou de leur identité.
 
-Participants, presenters and organizers of the workshop series and other related activities accept this Code of Conduct when being present at any workshop-related activities.
+Les participants, les présentateurs et les organisateurs de la série d'ateliers et d'autres activités connexes acceptent le présent code de conduite lorsqu'ils assistent à des activités liées aux ateliers.
 
-We do not tolerate behaviour that is disrespectful or that excludes, intimidates, or causes discomfort to others.
+Nous ne tolérons pas les comportements irrespectueux ou qui excluent, intimident ou gênent les autres.
 
-We do not tolerate discrimination or harassment based on characteristics that include, but are not limited to, gender identity and expression, sexual orientation, disability, physical appearance, body size, citizenship, nationality, ethnic or social origin, pregnancy, familial status, genetic information, religion or belief (or lack thereof), membership of a national minority, property, age, education, socio-economic status, technical choices, and experience level.
+Nous ne tolérons pas la discrimination ou le harcèlement fondés sur des caractéristiques telles que, mais sans s'y limiter, l'identité et l'expression du genre, l'orientation sexuelle, le handicap, l'apparence physique, la taille du corps, la citoyenneté, la nationalité, les origines ethniques ou sociales, la grossesse, le statut familial, les informations génétiques, la religion ou les convictions (ou l'absence de celles-ci), l'appartenance à une minorité nationale, la propriété, l'âge, l'éducation, le statut socio-économique, les choix techniques et le niveau d'expérience.
 
-It applies to all spaces managed by or affiliated with the workshop, including, but not limited to, workshops, email lists, and online forums such as GitHub, Slack and Twitter.
+Il s'applique à tous les espaces gérés par l'atelier ou affiliés à celui-ci, y compris, mais sans s'y limiter, les ateliers, les listes de diffusion et les forums en ligne tels que GitHub, Slack et Twitter.
 
-### Expected behaviour
+### Comportement attendu
 
-All participants are expected to show respect and courtesy to others. All interactions should be professional regardless of platform: either online or in-person. In order to foster a positive and professional learning environment we encourage the following kinds of behaviours in all workshop events and platforms:
+Tous les participants sont tenus de faire preuve de respect et de courtoisie envers les autres. Toutes les interactions doivent être professionnelles, quelle que soit la plateforme utilisée : en ligne ou en personne. 
 
-- Use welcoming and inclusive language
-- Be respectful of different viewpoints and experiences
-- Gracefully accept constructive criticism
-- Focus on what is best for the community
-- Show courtesy and respect towards other community members
+Afin de favoriser un environnement d'apprentissage positif et professionnel, nous encourageons les types de comportements suivants dans tous les événements et plates-formes des ateliers :
 
-### Unacceptable behaviour
+- Utiliser un langage accueillant et inclusif ;
+- Respecter les différents points de vue et expériences ;
+- Accepter avec grâce les critiques constructives ;
+- Se concentrer sur ce qui est le mieux pour la communauté ;
+- Faire preuve de courtoisie et de respect envers les autres membres de la communauté.
 
-Examples of unacceptable behaviour by participants at any workshop event/platform include:
+### Comportements inacceptables
 
-- written or verbal comments which have the effect of excluding people on the - basis of membership of any specific group;
-- causing someone to fear for their safety, such as through stalking or intimidation;
-- violent threats or language directed against another person;
-- the display of sexual or violent images;
-- unwelcome sexual attention;
-- nonconsensual or unwelcome physical contact;
-- insults or put-downs;
-- sexist, racist, homophobic, transphobic, ableist, or exclusionary jokes;
-- incitement to violence, suicide, or self-harm;
-- continuing to initiate interaction (including photography or recording) with - someone after being asked to stop;
-- publication of private communication without consent.
+Voici quelques exemples de comportements inacceptables de la part des participants à tout événement ou plateforme d'atelier :
 
+- les commentaires écrits ou verbaux qui ont pour effet d'exclure des personnes sur la base de leur appartenance à un groupe spécifique ;
+- faire craindre à quelqu'un pour sa sécurité, par exemple en le harcelant ou en l'intimidant ;
+- des menaces ou des propos violents dirigés contre une autre personne ;
+- l'affichage d'images sexuelles ou violentes ;
+- l'attention sexuelle non désirée ;
+- les contacts physiques non consensuels ou non désirés ;
+- des insultes ou des rabais ;
+- les blagues sexistes, racistes, homophobes, transphobes, incapables ou d'exclusion ;
+- l'incitation à la violence, au suicide ou à l'automutilation ;
+- la poursuite de l'interaction (y compris la photographie ou l'enregistrement) avec une personne après qu'on - lui a demandé d'arrêter ;
+- la publication d'une communication privée sans consentement.
 
-## Contributors
+## Contributeurs et contributrices
 
 ```{r eval=FALSE, include=FALSE}
-THIS SECTION MUST ONLY BE EDITED BY THE COORDINATORS OF THE WORKSHOP SERIES
+CETTE SECTION NE DOIT ÊTRE ÉDITÉE QUE PAR LES COORDINATEURS DE LA SÉRIE D'ATELIERS R
 ```
 
-Originally developed by:
+*Cette liste n'est pas finalisée. Si vous avez contribué à cet atelier et ne voyez pas votre nom, faites nous signe.*
 
-Contributed with changes to the presentation:
+Depuis 2014, plusieurs membres du CSBQ ont contribué à développer et à mettre à jour cet atelier de manière régulière et collaborative, dans le cadre de la bourse d'apprentissage et de développement (*Learning and Development Award*) du Centre québécois des sciences de la biodiversité.
 
-Contributed with changes to the written material:
+**Développé à l'origine par:**
+Monica Granados, Emmanuelle Chrétien, Bérenger Bourgeois, Amanda Winegardner, Xavier Giroux-Bougard, et Vincent Fugère.
 
-Contributed by reporting issues and suggesting modifications:
+**Contributions à la modification de la présentation :**
+Gabriel Muñoz, Katherine Hébert, Kevin Cazelles, Pedro Henrique P. Braga, Marie Hélène Brice
 
+**Contribution avec des changements à la documentation écrite :**
+Marie Hélène Brice, Katherine Hébert
 
-## Contributing
+**Contribution en signalant des problèmes et en suggérant des modifications :**
+Pedro Henrique P. Braga, Marie Hélène Brice, Kevin Cazelles
 
-Under construction.
+## Contribuez à la série!
 
+La série d'ateliers R du CSBQ dépend sur les contributions des membres étudiants diplômés, postdoctoraux et professionnels de la recherche du CSBQ pour développer et présenter les ateliers. Nous sommes toujours à la recherche de contributeurs et contributrices pour amélorier le matériel et pour instruire les ateliers. Pour plus d'informations, nous vous invitons à consulter notre [Protocole pour la présentation et le development](https://qcbsrworkshops.github.io/presenter-developer-protocol/). Si vous êtes intéressé(e)s à contribuer à la série d'ateliers, contactez-nous!
+
+Si vous trouvez des erreurs ou des incohérences, ou si vous souhaitez faire une suggestion, que ce soit sur la forme ou le contenu de ce matériel, vous êtes invités à ouvrir un [numéro](https://help.github.com/articles/about-issues/). Vous pouvez suivre ces étapes simples pour créer un nouveau [numéro](https://help.github.com/articles/creating-an-issue/).
 
 ```{r include=FALSE}
 library(knitr)
