--- a/pres-fr/workshop10-pres-fr.Rmd
+++ b/pres-fr/workshop10-pres-fr.Rmd
@@ -299,7 +299,7 @@ sum(spe == 0)/(nrow(spe)*ncol(spe))
 ---
 # Transformation des données d'abondances
 
-.alert[**Plus de 50%**] des données d'abondances consiste d'absences. C'est élevé, mais pas inhabituel pour ce type de données.
+.alert[**Plus de 50%**] des données d'abondances sont en fait des absences. C'est élevé, mais pas inhabituel pour ce type de données.
 
 --
 
@@ -399,7 +399,7 @@ L'analyse canonique de redondances est une ordination sous contraintes.
 
 .center[ ![:scale 60%](images/RDA.png)]
 
-Variables peuvent être quantitatives, qualitatives, ou binaires (0/1).
+Les variables peuvent être quantitatives, qualitatives, ou binaires (0/1).
 - .alert[transformez] et .alert[standardisez] les variables avant d'effectuer une RDA.
 
 ---
@@ -430,7 +430,7 @@ summary(spe.rda)
 ---
 # RDA output in R
 
-Pour interpréter les résultats d'une RDA, on peut d'abord ce concentrer sur cette partie clé de la sortie:
+Pour interpréter les résultats d'une RDA, on peut d'abord se concentrer sur cette partie clé de la sortie:
 
 ```{r, output.lines = 5:9, echo = FALSE}
 summary(spe.rda)
@@ -469,7 +469,7 @@ fwd.sel <- ordiR2step(rda(spe.hel ~ 1, data = env.z), # modèle le plus simple
 
 ???
 
-Noter que la sélection de variables avec un raisonnement écologique est beaucoup plus important que la sélection de variable comme ceci. Si un variable d'intérêt écologique n'est pas sélectionné, ça ne veut pas dire qu'il faut l'exclure.
+Notez que la sélection progressive est un outil d'aide à la décision, mais ne remplace pas votre jugement éclairé! La sélection finale des variables doit s'appuyer sur un raisonnement écologique. Ce n'est pas parce qu'une variable d'intérêt écologique n'est pas sélectionnée par sélection progressive qu'il faut nécessairement l'exclure.
 
 ---
 # Sélection de variables
@@ -505,7 +505,7 @@ anova.cca(spe.rda.signif, permutations = 1000, by = "term")
 ---
 # Représentation graphique des RDAs
 
-Une RDA permet la **visualization simultanée** des variables réponses et explicatives .comment[(i.e. espèces et variables environmentales)].
+Une RDA permet la **visualisation simultanée** des variables réponses et explicatives .comment[(i.e. espèces et variables environnementales)].
 <br>
 --
 <br>
@@ -514,7 +514,7 @@ Comme pour la PCA, on doit choisir entre deux options de cadrage:
 
 | Type 1                                           | Type 2                                            |
 | -------------------------------------------------|---------------------------------------------------|
-| distances entre objects ≈ distances euclidiennes | angles entre variables ≈ leur corrélation         |
+| distances entre objets ≈ distances euclidiennes  |    angles entre variables ≈ leur corrélation      |
 
 
 ---
@@ -529,11 +529,11 @@ ordiplot(spe.rda.signif,
 ]
 
 .pull-right[
-######Le cadrage 1 permet d'interpréter les distances entre objets dans la **matrice réponse**.
+######Le cadrage 1 permet d'interpréter les distances entre les objets dans la **matrice réponse**.
 
 .small[
 * Les communautés dans les sites (chiffres) .alert[plus rapprochés] ont des compositions *plus similaires*.
-* Les espèces .alert[plus rapprochés] occupent souvent les *mêmes sites*.
+* Les espèces .alert[plus rapprochées] occupent souvent les *mêmes sites*.
 ]
 ]
 
@@ -552,8 +552,8 @@ ordiplot(spe.rda.signif,
 ######Le cadrage 2 montre les effets des **variables explicatives**.
 .small[
 * .alert[Longues] flèches = cette variable explique fortement la variation dans la matrice d'abondances.
-* Flèches pointant des .alert[directions opposées] montrent une relation *négative*.
-* Flèches pointant la .alert[même direction] montrent une relation *positive*.
+* Flèches pointant des .alert[directions opposées] = montrent une relation *négative*.
+* Flèches pointant la .alert[même direction] = montrent une relation *positive*.
 ]
 ]
 
@@ -624,7 +624,7 @@ Voir le script et le [livre](https://qcbsrworkshops.github.io/workshop10/book-fr
 ---
 # Défi 1 ![:cube]()
 
-Effectuer une RDA pour modèliser les effect des variables environnementales sur l’abondance des espèces d'acariens.
+Effectuez une RDA pour modéliser les effets des variables environnementales sur l’abondance des espèces d'acariens.
 <br>
 
 .small[
@@ -679,7 +679,7 @@ fwd.sel$call
 ---
 # Défi 1: Solution
 
-**Étape 3:** Effectuer l'RDA et extraire le R2 ajusté.
+**Étape 3:** Effectuer la RDA et extraire le R2 ajusté.
 ```{r}
 # Refaire la RDA avec seulement les variables significatives
 mite.spe.rda.signif <- rda(mite.spe.hel ~ WatrCont + Shrub +
@@ -735,7 +735,7 @@ class: inverse, center, middle
 
 La RDA partielle est un cas particulier de la RDA qui permet de tenir compte de **covariables**.
 
-En d'autres mots, on peut modéliser les effets linéaires de la matrice $X$ sur la matrice $Y$, tout en controllant pour l'effet de la matrice $W$ de covariables.
+En d'autres mots, on peut modéliser les effets linéaires de la matrice $X$ sur la matrice $Y$, tout en contrôlant pour l'effet de la matrice de covariables $W$.
 
 .center[ ![:scale 90%](images/PartialRDA.png)]
 
@@ -773,7 +773,7 @@ spe.partial.rda <- rda(spe.hel, env.chem, env.topo)
 
 <br>
 .small[
-**Note:** On peut aussi utiliser une syntaxe de formule comme `Y ~ X + Condition(W)`, où `Condition()` permet de tenir compete de covariables.
+**Note:** On peut aussi utiliser une syntaxe de formule comme `Y ~ X + Condition(W)`, où `Condition()` permet de tenir compte de covariables.
 
 ```{r, eval = FALSE}
 spe.partial.rda <- rda(spe.hel ~ pH + dur + pho + nit + amm + oxy + dbo +
@@ -805,7 +805,7 @@ summary(spe.partial.rda)
 ---
 # Interprétation d'une RDA partielle
 
-On manque encore quelques détails importants pour notre interprétation du modèle!
+Il nous manque encore quelques détails importants pour notre interprétation du modèle!
 <br>
 <br>
 .pull-left2[
@@ -860,15 +860,15 @@ ordiplot(spe.partial.rda,
 
 ???
 
-Cadrage 2 montre les effets des variables explicatives, donc de la matrice X sur la matrice Y. L'effet des covariables est 'tenu en compte', et n'est pas réellement d'intérêt dans le modèle.
+Le cadrage 2 montre les effets des variables explicatives, donc de la matrice X sur la matrice Y. L'effet des covariables est 'pris en compte', et n'est pas réellement d'intérêt dans le modèle.
 
-Rappel: En cadrage 2, la longueur des flèches montre l'amplitude de l'effet, la direction montre la direction de la relation (opposés = négatif, même direction = positif).
+Rappel: En cadrage 2, la longueur des flèches montre l'amplitude de l'effet, leur direction montre la direction de la relation (direction opposée = négative, même direction = positive).
 
 ---
 # Défi 2 ![:cube]()
 
 .small[
-Effectuez une RDA partielle de l’abondance des espèces de mites (`mite.spe.hel`) en fonction des variables environnementales, tenant compte de l’effet du substrat (`SubsDens`, `WaterCont` and `Substrate`).
+Effectuez une RDA partielle de l’abondance des espèces de mites (`mite.spe.hel`) en fonction des variables environnementales tenant compte de l’effet du substrat (`SubsDens`, `WaterCont` and `Substrate`).
 * Quel pourcentage de variance est expliqué par les variables environnementales?
 * Le modèle est-il significatif?
 * Quels sont les axes significatifs?
@@ -909,7 +909,7 @@ Shrub et Topo expliquent .alert[9.8%] de la variation de l’abondance de mites,
 
 **Étape 3:** Interpréter les résultats!
 
-* Quel pourcentage de variance est expliqué par les variables environnementales?
+* Quel pourcentage de la variance est expliqué par les variables environnementales?
 ```{r}
 RsquareAdj(mite.spe.subs)$adj.r.squared
 ```
@@ -938,7 +938,7 @@ class: inverse, center, middle
 ---
 # Partitionnement de la variation
 
-Divise la variation d’une matrice de variable réponse en 2, 3, ou 4 matrices de variables explicatives.
+Divise la variation d’une matrice de variables réponses en 2, 3, ou 4 matrices de variables explicatives.
 * e.g. variables locales vs. à large échelle
 * e.g. abiotique vs. biotique
 
@@ -953,7 +953,7 @@ Divise la variation d’une matrice de variable réponse en 2, 3, ou 4 matrices 
 ---
 # Partitionnement de la variation dans R
 
-Pour démontrer le partitionnement des variations dans `R`, nous allons partitionner la variation de la composition des espèces de poissons entre les variables chimiques et topographiques.
+Pour démontrer le partitionnement de la variation dans `R`, nous allons partitionner la variation de la composition des espèces de poissons entre les variables chimiques et topographiques.
 
 .small[.alert[Note]: Assurez-vous que la libraire *vegan* est chargée!
 
@@ -964,7 +964,7 @@ spe.part.all$part # extraire résultats
 ]
 
 ---
-# Diagramme Venn
+# Diagramme de Venn
 
 ```{r, strip.white = TRUE, fig.width = 6, fig.height = 6}
 plot(spe.part.all,
@@ -1038,7 +1038,7 @@ anova.cca(rda(spe.hel, env.topo, env.chem))
 **Partitionnez la variation de l’abondance des espèces de mites entres des variables de substrat (`SubsDens`, `WatrCont`) et des variables spatiales significatives.**
 * Quelle est la proportion de variance expliquée par le substrat? par l'espace?
 * Quelles sont les fractions significatives?
-* Diagramme Venn des résultats!
+* Diagramme de Venn des résultats!
 
 
 Chargez les variables spatiales:
@@ -1076,7 +1076,7 @@ spat.sel$call
 ---
 # Défi 3: Solution
 
-**Étape 2:** Créer sous-groupes de variables explicatives.
+**Étape 2:** Créer des sous-groupes de variables explicatives.
 
 ```{r}
 # Variables de substrat
@@ -1091,7 +1091,7 @@ mite.spat <- subset(mite.pcnm,
 ---
 # Défi 3: Solution
 
-**Étape 3:** Partitionnement de la variation dans la matrice d'abondances.
+**Étape 3:** Partitionnement de la variation de la matrice d'abondances.
 
 ```{r}
 mite.part <- varpart(mite.spe.hel, mite.subs, mite.spat)
@@ -1123,7 +1123,7 @@ anova.cca(rda(mite.spe.hel, mite.spat, mite.subs))
 ---
 # Défi 3: Solution
 
-**Étape 5:** Visualiser les résultats avec un diagramme Venn.
+**Étape 5:** Visualiser les résultats avec un diagramme de Venn.
 ```{r, fig.height=6, fig.width=6}
 plot(mite.part,
      digits = 2,
@@ -1136,27 +1136,27 @@ plot(mite.part,
 ---
 # Défi 3: Solution
 
-**Alors, quels sont les effets de substrat et de l'espace sur les abondances d'espèces de mites?**
+**Alors, quels sont les effets du substrat et de l'espace sur les abondances d'espèces de mites?**
 
-En groupes, résumez et interprétez ces résultats comme si vous écriviez un article. summarise and interpret these results as if you were writing an article. **Indice:** Pourquoi on trouve un effet si important de l'espace?
+En groupes, résumez et interprétez ces résultats comme si vous écriviez un article. **Indice:** Pourquoi trouve-t-on un effet si important de l'espace?
 
 --
 
 <br>.comment[
-L'espace explique la plupart de la variation dans la communauté: elle explique **19.4%** de la variation seule, et **24.8%** est expliqué *conjointement* par l'espace et le substrat. Le susbtrat n'explique que **~6%** de la variation entre sites sans l'effet de l'espace.
+L'espace explique la plupart de la variation dans la communauté: elle explique **19.4%** de la variation à elle seule, alors que le substrat à lui seul n'en explique que **~6%**. **24.8%** de la variation est expliqué *conjointement* par l'espace et le substrat.
 
 L'effet de l'espace survient peut-être parce que:
 * un processus spatial influence la communauté, comme la dispersion
-* ou, nous manquons une variable environnementale importante dans notre modèle, qui varie elle-même dans l'espace
+* ou encore il manque une variable environnementale importante dans notre modèle, qui varie elle-même dans l'espace
 ]
 
 ???
 
-Breakout rooms: 5-10 minutes.
+Salles de répartition: 5-10 minutes.
 
-Réponse: Cet effet important de l'espace pourrait être un signe qu'un processus écologique spatial est important ici (comme la dispersion, par exemple). Cependant, il pourrait également nous indiquer que nous manquons une variable environnementale importante dans notre modèle, qui varie elle-même dans l'espace !
+Réponse: Cet effet important de l'espace pourrait être un signe qu'un processus écologique spatial est important ici (comme la dispersion, par exemple). Cependant, il pourrait également nous indiquer qu'il manque une variable environnementale importante dans notre modèle, qui varie elle-même dans l'espace !
 
-Notez également que la moitié de la variation n'est pas expliquée par les variables que nous avons incluses dans le modèle (regardez les résidus !), le modèle pourrait donc être amélioré.
+Notez également que la moitié de la variation n'est pas expliquée par les variables que nous avons incluses dans le modèle (regardez les résidus !), le modèle pourrait donc théoriquement être amélioré.
 
 ---
 exclude: true
@@ -1181,10 +1181,10 @@ exclude: true
 
 .center[![:scale 75%](images/MRT.png)]
 
-L'arbre de régression multivarié consiste de:
-* .alert[Branches]: chaque lignée formée par un noeud
-* .alert[Noeuds]: Point où les données se divisent en 2 groupes (caractérisé par une valeur limite d'une variable explicative)
-* .alert[Feuilles]: groupe terminal de sites
+L'arbre de régression multivarié est formé de:
+* .alert[Branches]: chacune des divisions d'un noeud
+* .alert[Noeuds]: points où les données se divisent en 2 groupes (caractérisés par une valeur limite d'une variable explicative)
+* .alert[Feuilles]: groupes terminaux de sites
 
 ---
 exclude: true
@@ -1192,10 +1192,10 @@ exclude: true
 # Arbre de régression multivarié (MRT)
 
 Plusieurs avantages:
-* N'assume pas de relation linéaire entre les matrices Y et X
+* Ne présume pas l'existence d'une relation linéaire entre les matrices Y et X
 * Facile à interpréter et à visualiser
 * Robuste en présence de valeurs manquantes ou de colinéarité(s) entre les descripteurs
-* Valeurs brutes peuvent être utilisées (sans transformation)
+* Les valeurs brutes peuvent être utilisées (sans transformation)
 
 ---
 exclude: true
@@ -1207,10 +1207,10 @@ La méthode implique deux volets s'effectuant en parallèle:
 2. .comment[Validation croisée] pour identifier l'arbre ayant le meilleur pouvoir prédictif.
 <br>
 
-Choisissez l'arbre selon les objectifs de ton étude. Généralement, on veut un arbre:
+Choisissez l'arbre selon les objectifs de votre étude. Généralement, on veut un arbre:
 * .comment[parcimonieux]
 * mais avec un nombre .comment[informatif] de groupes
-* Essentiellement: quel arbre répond à ta question?
+* Essentiellement: quel arbre répond à votre question?
 
 
 ---
@@ -1266,11 +1266,11 @@ doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
                     legend = FALSE, margin = 0.01, cp = 0, plot.add = FALSE)
 ```
 .small[
-* Points verts: Erreur relative
-* Points bleus: Erreur relative de validation croisée (CVRE)
-* Point rouge: Arbre avec la valeur minimale de CVRE
+* Points verts: erreur relative
+* Points bleus: erreur relative de validation croisée (CVRE)
+* Point rouge: arbre avec la valeur minimale de CVRE
 * Point orange: l'arbre le plus petit ayant un CVRE à 1 écart type du CVRE minimal
-* Barres vertes: # de fois que chaque taille d'arbre a été choisi
+* Barres vertes: nombre de fois que chaque taille d'arbre a été choisie
 ]
 
 ---
@@ -1309,7 +1309,7 @@ doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
 ```
 .small[
 * La matrice d'abondances est partitionnée selon un seuil d'.alert[altitude (361.5)].
-  * "Barplots": abondances d'espèces inclus dans chaque groupe
+  * "Barplots": abondances d'espèces incluses dans chaque groupe
 * Erreur résiduelle = 0.563, alors le R2 du modèle est .alert[43.7%]
 ]
 
@@ -1320,7 +1320,7 @@ exclude: true
 
 Pour choisir un arbre, on peut aussi comparer plusieurs solutions possibles.
 
-Par exemple, considérons une solution de 10 groupes!
+Par exemple, considérons une solution à 10 groupes!
 ```{r, echo = FALSE, results = 'hide', fig.height = 4.5, fig.width = 12, eval = F}
 mvpart(as.matrix(spe.hel) ~ ., data = env,
         xv = "none", # no cross-validation
@@ -1331,7 +1331,7 @@ mvpart(as.matrix(spe.hel) ~ ., data = env,
 
 .small[
 * L'interprétation est .alert[plus difficile].
-* Plus grand pouvoir explicatif, MAIS le pouvoir prédictif (CV Error = 0.671) ressemble à la solution précédante (CV Error = 0.673).
+* Plus grand pouvoir explicatif, MAIS le pouvoir prédictif (CV Error = 0.671) ressemble à la solution précédente (CV Error = 0.673).
 ]
 
 ---
@@ -1339,7 +1339,7 @@ exclude: true
 
 # MRT dans R: Comparaison d'arbres
 
-Considérons une solution avec moins (4) de groupes!
+Considérons une solution avec moins de groupes (4)!
 .tiny[
 ```{r, echo = FALSE, results = 'hide', fig.height = 4.5, fig.width =8, eval = F}
 mvpart(as.matrix(spe.hel) ~ ., data = env,
@@ -1352,7 +1352,7 @@ mvpart(as.matrix(spe.hel) ~ ., data = env,
 .small[
 * Plus facile à interpréter!
 * Plus grand pouvoir explicatif .alert[(Error)] que notre solution originale
-* .alert[Plus grand pouvoir prédictif] que les 2 solutions précédantes (CV Error)
+* .alert[Plus grand pouvoir prédictif] que les 2 solutions précédentes (CV Error)
 ]
 
 ---
@@ -1373,7 +1373,7 @@ exclude: true
 
 # MRT dans R: Sommaire des résultats
 
-Pour accèder au sommaire des résultats:
+Pour accéder au sommaire des résultats:
 .tiny[
 ```{r, eval = FALSE}
 summary(doubs.mrt)
@@ -1415,7 +1415,7 @@ Créez un arbre de régression multivarié pour les données .comment[mite].
 * Choisir l'arbre le plus petit à 1 écart type du CVRE minimal.
 * Quelle est la variance totale expliquée par cet arbre?
 * Combien y a-t-il de feuilles?
-* Quels sont les 3 principales espèces discriminantes?
+* Quelles sont les 3 principales espèces discriminantes?
 ]
 <br>
 .small[
@@ -1495,9 +1495,9 @@ class: inverse, center, middle
 ---
 # Analyse discriminante linéaire (LDA)
 
-Une LDA divise une variable réponse en groupes selon un facteur en trouvant une combinaison de variables qui donne la **meilleure séparation entre groupes que possible**. Ceci est utile parce que:
-* Détermine si une matrice de variables indépendantes explique bien un groupement établi *a priori*;
-* Et donc de prédire la classification de nouvelles données!
+Une LDA divise une variable réponse en groupes selon un facteur en trouvant une combinaison de variables qui donne la **meilleure séparation possible entre les groupes**. Ceci est utile parce que:
+* La LDA détermine si une matrice de variables indépendantes explique bien un groupement établi *a priori*;
+* Et permet donc de prédire la classification de nouvelles données!
 
   .comment[.small[e.g. prédire l’appartenance d’une espèce de poisson à un groupe (marin vs. eau douce) selon sa morphologie]]
 
@@ -1517,7 +1517,7 @@ Généralement, les variables environnementales changent avec la latitude. On pe
 
 <br><br><br><br>
 .center[
-**Si on classifie les sites de la rivière Doubs selon la latitude, à quel point les variables environnementales expliquent-elles bien ces groupements?**
+**Si on classifie les sites de la rivière Doubs en fonction de leur latitude, à quel point les variables environnementales expliquent-elles ces groupements?**
 
 .comment[Une LDA permet de répondre à cette question!]
 
@@ -1658,14 +1658,14 @@ predict.group$class
 
 ???
 
-Nos nouveaux sites, dans l'ordre, ont été classés dans les groupes 1, 1, 1, 3 et 3 respectivement.
+Nos nouveaux sites, dans l'ordre, ont été classés dans les groupes 1, 1, 1, 3 et 3.
 
 ---
 # Défi 4 ![:cube]()
 
 .small[Créez quatre groupes de latitude avec des étendues égales à partir des données `mite.xy`. Ensuite, faites une LDA sur les données environnementales `mite.env` des acariens (`SubsDens` et `WatrCont`).
 
-**Quelle proportion de sites ont été classifiés correctement au groupe 1? Au groupe 2?**
+**Quelle proportion de sites ont été classifiés correctement dans le groupe 1? Le groupe 2?**
 
 <br>
 Pour commencer, chargez les données `mite.xy`:
@@ -1743,15 +1743,15 @@ diag(prop.table(mite.table, 1))
 ```
 
 <br>
-**Alors, quelle proportion de sites ont été classifiés correctement au groupe 1? Au groupe 2?**
+**Alors, quelle proportion de sites ont été classifiés correctement dans le groupe 1? Le groupe 2?**
 
 --
 
-* .alert[60%] des sites ont été classifiés correctement au groupe 1, et .alert[64.7%] au groupe 2.
+* .alert[60%] des sites ont été classifiés correctement dans le groupe 1, et .alert[64.7%] dans le groupe 2.
 
 <br><br>
 
-.center[*C'est ça! On a réussit!*]
+.center[*C'est ça! On a réussi!*]
 
 ---
 
